@@ -1,1 +1,1 @@
-Copyright (c) 2001-2006 Nexedi SARL
+Copyright (c) 2001-2007 Nexedi SA
